--- a/src/templates/landing_2/common/_footer.html
+++ b/src/templates/landing_2/common/_footer.html
@@ -2,11 +2,31 @@
     <div class="grilla">
         <div class="fWrap  f aic jcc fdc-768">
             <div class="fMenu f aic jcc fItem">
-                <a href="#acerca" class="headerAnclaBlock">Acerca de</a>
-                <a href="#agenda" class="headerAnclaBlock">Agenda</a>
-                <a href="#expositor" class="headerAnclaBlock">Expositor</a>
-                <a href="#blog" class="headerAnclaBlock">Blog</a>
-                <a href="#empresa" class="headerAnclaBlock">Empresas</a>
+                {% if header_section.show_about_section %}
+                <a href="#acerca" class="headerAnclaBlock">
+                    {{header_section.about_section_header_name}}
+                </a>
+                {% endif %}
+                {% if header_section.show_schedule_section %}
+                <a href="#agenda" class="headerAnclaBlock">
+                    {{header_section.schecule_header_name}}
+                </a>
+                {% endif %}
+                {% if header_section.show_exhibitors_section %}
+                <a href="#expositor" class="headerAnclaBlock">
+                    {{header_section.exhibitors_header_name}}
+                </a>
+                {% endif %}
+                {% if header_section.show_blog_section %}
+                <a href="#blog" class="headerAnclaBlock">
+                    {{header_section.blog_header_name}}
+                </a>
+                {% endif %}
+                {% if header_section.show_sponsors_section %}
+                <a href="#empresa" class="headerAnclaBlock">
+                    {{header_section.sponsors_header_name}}
+                </a>
+                {% endif %}
             </div>
             <div class="fRedes fItem f aic jcc">
                 {% if footer.linkedin %}
