--- a/src/static/web_3/css/builds/s5.css
+++ b/src/static/web_3/css/builds/s5.css
@@ -1,109 +1,1 @@
-.b5 {
-  padding: 100px 0px;
-  width: calc(100% - 20px);
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  border-radius: 32px;
-  overflow: hidden;
-  margin-bottom: 0px;
-}
-.b5:before {
-  content: '';
-  background: -webkit-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);
-  background: -moz-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);
-  background: -o-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);
-  background: -ms-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);
-  background: linear-gradient(180deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  height: 100%;
-  left: 0;
-  z-index: 5;
-}
-.b5:after {
-  content: '';
-  background: -webkit-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);
-  background: -moz-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);
-  background: -o-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);
-  background: -ms-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);
-  background: linear-gradient(21.3deg, #00dace 10.24%, #fa1fae 59.87%);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  height: 100%;
-  bottom: 0;
-  top: initial;
-  left: 0;
-  z-index: 3;
-}
-.b5 h4 {
-  font-size: 72px;
-  font-family: 'InterTight-SemiBold', sans-serif;
-  line-height: normal;
-  color: #fff;
-  margin-bottom: 40px;
-}
-@media screen and (max-width: 1600px) {
-  .b5 h4 {
-    font-size: calc(40px + (72 - 40) * ((100vw - 375px) / (1920 - 375)));
-  }
-}
-.b5 .grilla {
-  position: relative;
-  z-index: 20;
-}
-.b5List {
-  display: grid;
-  grid-gap: 24px;
-}
-.b5Item {
-  background: #4b4b4b;
-  border-radius: 16px;
-  overflow: hidden;
-}
-.b5ItemClick {
-  height: 88px;
-  padding: 0px 32px;
-  border-radius: 16px;
-  background: #151515;
-  font-size: 24px;
-  font-family: 'InterTight-SemiBold', sans-serif;
-  line-height: normal;
-  color: #e9e9e9;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-}
-@media screen and (max-width: 1600px) {
-  .b5ItemClick {
-    font-size: calc(18px + (24 - 18) * ((100vw - 375px) / (1920 - 375)));
-  }
-}
-.b5ItemClick:after {
-  font-size: 30px;
-}
-.b5Info .gParrafo {
-  padding: 20px 32px;
-  background: #4b4b4b;
-}
+.b5{padding:100px 0;width:calc(100% - 20px);margin-left:auto;margin-right:auto;position:relative;border-radius:32px;overflow:hidden;margin-bottom:0}.b5:before{content:'';background:-webkit-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);background:-moz-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);background:-o-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);background:-ms-linear-gradient(270deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);background:linear-gradient(180deg, #0d0d0d 35.12%, rgba(13,13,13,0) 100%);position:absolute;width:100%;height:100%;top:0;left:0;height:100%;left:0;z-index:5}.b5:after{content:'';background:-webkit-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);background:-moz-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);background:-o-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);background:-ms-linear-gradient(68.7deg, #00dace 10.24%, #fa1fae 59.87%);background:linear-gradient(21.3deg, #00dace 10.24%, #fa1fae 59.87%);position:absolute;width:100%;height:100%;top:0;left:0;height:100%;bottom:0;top:initial;left:0;z-index:3}.b5 h4{font-size:72px;font-family:'InterTight-SemiBold',sans-serif;line-height:normal;color:#fff;margin-bottom:40px}@media screen and (max-width:1600px){.b5 h4{font-size:calc(40px + (72 - 40) * ((100vw - 375px) / (1920 - 375)))}}.b5 .grilla{position:relative;z-index:20}.b5List{display:grid;grid-gap:24px}.b5Item{background:#4b4b4b;border-radius:16px;overflow:hidden}.b5ItemClick{height:88px;padding:0 32px;border-radius:16px;background:#151515;font-size:24px;font-family:'InterTight-SemiBold',sans-serif;line-height:normal;color:#e9e9e9;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:justify;-moz-box-pack:justify;-o-box-pack:justify;-ms-flex-pack:justify;-webkit-justify-content:space-between;justify-content:space-between}@media screen and (max-width:1600px){.b5ItemClick{font-size:calc(18px + (24 - 18) * ((100vw - 375px) / (1920 - 375)))}}.b5ItemClick:after{font-size:30px}.b5Info .gParrafo{padding:20px 32px;background:#4b4b4b}
