--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -35,8 +35,8 @@
     <!-- <script src="/static/web_3/js/jquery-3.2.1.min.js" type="text/javascript"></script> -->
     <script src="/static/web_3/js/jquery-3.7.1.min.js" type="text/javascript"></script>
     <script src="/static/web_3/js/main.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/validationform/jquery.validationEngine.js"></script>
-
+    <script src="/static/web_3/js/validationform/jquery.validationEngine.js"></script>
+    
     <div class="coockies" id="elCoockie">
         <div class="grilla">
             <div class="gParrafo">
@@ -47,12 +47,12 @@
     </div>
 
     <!-- <a href="" class="empresafx">
-        <img src="{{STATIC_URL}}img/logocallirgos.jpeg" alt="">
+        <img src="/static/web_3/img/logocallirgos.jpeg" alt="">
     </a> -->
     <div class="popUpInfo">
         <a href="" class="icon-close cerrarPopup"></a>
         <figure>
-            <img src="{{STATIC_URL}}img/pop-up-agility.png" alt="">
+            <img src="/static/web_3/img/pop-up-agility.png" alt="">
         </figure>
     </div>
 
@@ -75,7 +75,7 @@
                 localStorage.setItem('ocultarElemento', 'true');
             });
         });
-
+        
         $(function(){
             //Configuraciòn general de plugin formulario
             $("form").validationEngine('attach', {
@@ -121,7 +121,7 @@
                 if (!valid) {
 
                     } else {
-
+                   
                 }
             });
             //Evento form actualizar contraseña
@@ -133,7 +133,7 @@
                 if (!valid) {
 
                     } else {
-
+                   
                 }
             });
         })
@@ -146,7 +146,7 @@
                 let inputCode = e.keyCode || e.charCode;
                 if(inputCode!=8 && inputCode!=37 && inputCode!=39 && inputCode!=46){
                     var charStr = String.fromCharCode(inputCode);
-                    !getTypeValue.test(charStr) ? event.preventDefault() : console.log("correcto")
+                    !getTypeValue.test(charStr) ? event.preventDefault() : console.log("correcto")	
                 }
             })
         }
@@ -158,7 +158,7 @@
             inputBox.addEventListener('focusout',function() {
                 if(this.value === ""){
                     this.parentNode.classList.remove('active')
-                } 
+                }  	
             })
         }
 
