--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -19,11 +19,11 @@
         <div class="b1Info">
             <div class="b1Top f aife jcsb fdc-768">
                 <div class="b1InfoTopLeft f aife jcfs fdc-480">
-                    <img src="/static/web_3/img/credicorp/home-b1-imgLogo.png" alt="" width="650" class="imgLogo">
+                    <img src="{{company.image_banner.url}}" alt="" width="650" class="imgLogo">
                     <a href="#" class="button" id="b1ButtonRegister">Registrate</a>
                 </div>
                 <div class="b1InfoTopRight">
-                    <img src="/static/web_3/img/credicorp/home-b1-fecha.png" alt="">
+                    <img src="{{company.banner_second_section_image.url}}" alt="">
                 </div>
             </div>
             <div class="b1Bottom">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <img src="/static/web_3/img/credicorp/home-b1-imgBottom.png" alt="" class="imgAbsolute">
+    <img src="{{company.banner_footer_section_image.url}}" alt="" class="imgAbsolute">
 </section>
 
 <section class="b2 mY scrollWrap anclaBlock" id="acerca">
