--- a/src/templates/landing_2/common/_base.html
+++ b/src/templates/landing_2/common/_base.html
@@ -39,14 +39,16 @@
     <script src="/static/web_2/js/main.js" type="text/javascript"></script>
     <script src="/static/web_2/js/validationform/jquery.validationEngine.js"></script>
 
+    {% if company.cookies_policy %}
     <div class="coockies" id="elCoockie">
         <div class="grilla">
             <div class="gParrafo">
-                <p>Utilizamos cookies para proporcionarte una mejor experiencia.  Conoce nuestra <a href="#">política de cookies</a></p>
+                <p>Este sitio web utiliza cookies necesarias para su funcionamiento. Antes de continuar navegando, te sugerimos revisar el tratamiento de estas en nuestra <a target="_blank" href="{{company.cookies_policy.url}}">Política de Cookies</a></p>
             </div>
-            <a href="#" class="gButton " id="buttonCookie">Aceptar</a>
+            <a href="#" class="gButton " id="buttonCookie">Cerrar</a>
         </div>
     </div>
+    {% endif %}
 
     <!-- <a href="" class="empresafx">
         <img src="/static/web_2/img/logocallirgos.jpeg" alt="">
