--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -36,25 +36,29 @@
     <script src="/static/web_3/js/jquery-3.7.1.min.js" type="text/javascript"></script>
     <script src="/static/web_3/js/main.js" type="text/javascript"></script>
     <script src="/static/web_3/js/validationform/jquery.validationEngine.js"></script>
-    
+
+    {% if company.cookies_policy %}
     <div class="coockies" id="elCoockie">
         <div class="grilla">
             <div class="gParrafo">
-                <p>Utilizamos cookies para proporcionarte una mejor experiencia.  Conoce nuestra <a href="#">política de cookies</a></p>
+                <p>Este sitio web utiliza cookies necesarias para su funcionamiento. Antes de continuar navegando, te sugerimos revisar el tratamiento de estas en nuestra <a target="_blank" href="{{company.cookies_policy.url}}">Política de Cookies</a></p>
             </div>
-            <a href="#" class="gButton " id="buttonCookie">Aceptar</a>
+            <a href="#" class="gButton " id="buttonCookie">Cerrar</a>
         </div>
     </div>
+    {% endif %}
 
     <!-- <a href="" class="empresafx">
         <img src="/static/web_3/img/logocallirgos.jpeg" alt="">
     </a> -->
+    {% if company.warning_img%}
     <div class="popUpInfo">
         <a href="" class="icon-close cerrarPopup"></a>
         <figure>
-            <img src="/static/web_3/img/pop-up-agility.png" alt="">
+            <img src="{{company.warning_img.url}}" alt="">
         </figure>
     </div>
+    {% endif %}
 
 
     <!-- JSADD START -->
