--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -85,7 +85,11 @@
                     <div class="b3Item b3ItemClickPopup swiper-slide"
                     data-image="{{ex.image.url}}"
                     data-logo="/static/web_3/img/credicorp/home-b3-imgLogoPopup.png"
-                    data-pais="{{ex.flag_image.url}}"
+                    {% if ex.flag_image %}
+                        data-pais="{{ex.flag_image.url}}"
+                    {% else %}
+                        data-pais="/static/web_3/img/credicorp/bandera-per.png"
+                    {% endif %}
                     data-name="{{ex.name}}"
                     data-cargo="{{ex.title}} - {{ex.organization}}"
                     data-text="<p>{{ex.description}}</p>">
@@ -95,7 +99,11 @@
                         <div class="b3Info">
                             <div class="b3Name f aic jcc">
                                 <p class="name">{{ex.name}}</p>
-                                <img src="{{ex.flag_image.url}}" alt="">
+                                {% if ex.flag_image %}
+                                    <img src="{{ex.flag_image.url}}" alt="">
+                                {% else %}
+                                    <img src="/static/web_3/img/credicorp/bandera-per.png" alt="">
+                                {% endif %}
                             </div>
                             <p class="cargo">{{ex.title}} - {{ex.organization}}</p>
                         </div>
@@ -163,7 +171,11 @@
             {% for row in workshops %}
                 <div class="b3ItemClickPopup b4RighItem f aic jcsb fdc-480"
                 data-image="{{row.exhibitor.image.url}}"
+                {% if row.exhibitor.flag_image %}
                 data-pais="{{row.exhibitor.flag_image.url}}"
+                {% else %}
+                data-pais="/static/web_3/img/credicorp/bandera-per.png"
+                {% endif %}
                 data-name="{{row.exhibitor.name}}"
                 data-cargo="{{row.exhibitor.title}} - {{row.exhibitor.organization}}"
                 data-text="<p>{{row.description}}</p>"
