--- a/src/templates/landing_2/common/_base.html
+++ b/src/templates/landing_2/common/_base.html
@@ -31,7 +31,9 @@
         </div>
         {% include "landing_2/common/_footer.html" %}
     </div>
-    <a href="#" class="icon-whatsapp wspFixed"></a>
+    {% if company.contact_phone %}
+        <a target="_blank" href="https://wa.me/{{company.contact_phone}}" class="icon-whatsapp wspFixed"></a>
+    {% endif %}
     <!-- <a href="#" class="openSidebarMobile icon-menu"></a> -->
     <!-- <div class="sidebarContentMobile"></div> -->
     <!-- <script src="/static/web_2/js/jquery-3.2.1.min.js" type="text/javascript"></script> -->
