--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -64,7 +64,7 @@
                         Hola {{company_user.names}}
                     </a>
                     <ul>
-                        {% if company_user.in_person %}
+                        {% if company_user.in_person and company_user.confirmed %}
                             <li><a class="link" href="{{ticket_url}}">Mi Ticket</a></li>
                         {% endif %}
                         {% if company_user.virtual or request.company.enable_credentials %}
@@ -361,6 +361,6 @@
         <h3>Registro exitoso</h3>
         <div class="gParrafo message-waiting-confirmation">
         </div>
-        <a href="#" class="gButton buttonClosePopup">Ok</a>
+        <a href="{% url 'landing:home' %}" class="gButton buttonClosePopup">Ok</a>
     </div>
 </div>
